fix: make header switch menu visible

--- a/online-zoo/pages/landing/header-media.scss
+++ b/online-zoo/pages/landing/header-media.scss
@@ -6,6 +6,7 @@
 
         .switch-menu {
             margin-right: 0;
+            display: flex;
         }
     }
 }
@@ -22,8 +23,9 @@
 
 @media (max-width: 641px) {
     header {
-        position: fixed;
-        z-index: 1000;
+        position: sticky;
+        top: 0;
+        z-index: 2000;
     }
 }
 
